[tool.poetry]
name = "dependabot-poetry12"
version = "0.1.0"
description = ""
authors = ["magame95 <galavix.mendez@gmail.com>"]
readme = "README.md"
packages = [{include = "dependabot_poetry12"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.6"


[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
